src/less/page/page.less
.page {
  position: relative;
  margin: 0 auto;
  padding: 16px;
  color: @dark;
  background-color: @light;
  scroll-behavior: smooth;
  @include normal-font(14px, 1.25, 300);
}

img {
  max-width: 100%;
  height: auto;
  object-fit: cover;
}

a {
  color: inherit;
  font: inherit;
  text-decoration: none;
}

